# ZeroedStore

./: CHANGELOG.md  Cargo.toml  LICENSE-MPL-2.0  README.md  deny.toml
.github/workflows/: rust.yml
src/: errors.rs  lib.rs  store.rs
