[package]
name = "zeroed-store"
version = "2.0.0"
authors = ["Wasmium Network Developers <hq@wasmium.network>"]
edition = "2021"
license = "MPL-2.0"
description = "A Simple Store to manage data initialized as zeroed bytes"
homepage = "https://github.com/wasmium"
repository = "https://github.com/wasmium/ZeroedStore"
readme = "README.md"


[dependencies]
borsh = "0.9.3"

[features]
default = ["constant_sizeof"]
non_constant_sizeof = []
constant_sizeof = []

[dev-dependencies]
bs58 = { version = "0.4.0" }
